--- a/components/apps/quay-registry-operator/overlays/default/kustomization.yaml
+++ b/components/apps/quay-registry-operator/overlays/default/kustomization.yaml
@@ -5,4 +5,5 @@ namespace: quay
 
 resources:
 - namespace.yaml
+- operator-group.yaml
 - github.com/redhat-cop/gitops-catalog/quay-registry-operator/operator/overlays/stable-3.6
