Add registry CRD

--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/kustomization.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/kustomization.yaml
@@ -6,3 +6,4 @@ namespace: quay
 resources:
 - ../../../../../../components/apps/quay-registry-operator/overlays/default
 - registry-config-bundle-secret.yaml
+- registry.yaml
