Add registry CR and retries

--- a/clusters/local.home/argocd/apps/quay-registry-operator/base/quay-registry-operator-app.yaml
+++ b/clusters/local.home/argocd/apps/quay-registry-operator/base/quay-registry-operator-app.yaml
@@ -19,3 +19,9 @@ spec:
   syncPolicy:
     automated:
       selfHeal: true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
