Set objectstorage to false to use qnap config

--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   components:
     - kind: objectstorage
-      managed: true
+      managed: false
     - managed: true
       kind: tls
   configBundleSecret: config-bundle-secret
