Remove description as it no longer complies with CRD

--- a/tenants/product-catalog/namespaces/overlays/gitops/product-catalog-project.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/product-catalog-project.yaml
@@ -29,8 +29,7 @@ spec:
   - namespace: 'product-catalog-gitops'
     server: 'https://kubernetes.default.svc'
   roles:
-  - description: Users with admin to applications in project
-    name: users
+  - name: users
     policies:
     - p, role:user, applications, *, *, allow
     - p, role:user, projects, get, *, allow
