Disable hpa in quay

--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
@@ -8,4 +8,6 @@ spec:
       managed: false
     - managed: true
       kind: tls
+    - managed: false
+      kind: horizontalpodautoscaler
   configBundleSecret: config-bundle-secret
