--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
@@ -10,4 +10,16 @@ spec:
       kind: tls
     - managed: false
       kind: horizontalpodautoscaler
+    - kind: postgres
+      managed: true
+    - kind: clair
+      managed: true
+    - kind: redis
+      managed: true
+    - kind: route
+      managed: true
+    - kind: mirror
+      managed: true
+    - kind: monitoring
+      managed: false
   configBundleSecret: config-bundle-secret
