--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
@@ -6,17 +6,17 @@ spec:
   components:
     - kind: objectstorage
       managed: false
-    - managed: true
+    - managed: false
       kind: tls
     - managed: false
       kind: horizontalpodautoscaler
+    - kind: route
+      managed: false
     - kind: postgres
       managed: true
     - kind: clair
       managed: true
     - kind: redis
-      managed: true
-    - kind: route
       managed: true
     - kind: mirror
       managed: true
