--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/kustomization.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
 - ../../../../../../components/apps/quay-registry-operator/overlays/default
 - registry-config-bundle-secret.yaml
 - registry.yaml
+- registry-app-route.yaml
