--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry-app-route.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry-app-route.yaml
@@ -17,3 +17,39 @@ spec:
   tls:
     termination: passthrough
   wildcardPolicy: None
+---
+apiVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  name: registry-quay-builder
+  namespace: quay
+spec:
+  host: registry-builder.apps.home.ocplab.com
+  port:
+    targetPort: grpc
+  tls:
+    insecureEdgeTerminationPolicy: Redirect
+    termination: reencrypt
+  to:
+    kind: Service
+    name: registry-quay-app
+    weight: 100
+  wildcardPolicy: None
+---
+apiVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  name: registry-quay-config-editor
+  namespace: quay
+spec:
+  host: registry-config-editor.apps.home.ocplab.com
+  port:
+    targetPort: http
+  tls:
+    insecureEdgeTerminationPolicy: Redirect
+    termination: edge
+  to:
+    kind: Service
+    name: registry-quay-config-editor
+    weight: 100
+  wildcardPolicy: None
