Change argo label for pipelinerun

--- a/tenants/product-catalog/namespaces/overlays/cicd/generate-acs-secret.yaml
+++ b/tenants/product-catalog/namespaces/overlays/cicd/generate-acs-secret.yaml
@@ -6,7 +6,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "3"
     pipeline.openshift.io/started-by: admin
   labels:
-    argocd.argoproj.io/instance: config-acs
+    argocd.argoproj.io/instance: tenant-product-catalog-cicd
     tekton.dev/pipeline: stackrox-token-secret-pipeline
   name: stackrox-token-secret-product-catalog-cicd
   namespace: stackrox
