Set quay minimum sizing

--- a/components/apps/quay-registry-operator/overlays/default/kustomization.yaml
+++ b/components/apps/quay-registry-operator/overlays/default/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
 - namespace.yaml
 - operator-group.yaml
 - github.com/redhat-cop/gitops-catalog/quay-registry-operator/operator/overlays/stable-3.6
+- set-minimum-sizing-job.yaml
