--- a/components/apps/quay-registry-operator/overlays/default/set-minimum-sizing-job.yaml
+++ b/components/apps/quay-registry-operator/overlays/default/set-minimum-sizing-job.yaml
@@ -4,7 +4,7 @@ metadata:
   name: quay-minimum-sizing
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    # argocd.argoproj.io/hook-delete-policy: HookSucceeded
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -12,7 +12,7 @@ metadata:
   name: quay-minimum-sizing
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+#    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -27,7 +27,7 @@ metadata:
   name: set-quay-minimum-sizing
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+#    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
