Make sleep 5 minutes since operator takes awhile to do it's magic and we want to avoid contention

--- a/components/apps/quay-registry-operator/overlays/default/set-minimum-sizing-job.yaml
+++ b/components/apps/quay-registry-operator/overlays/default/set-minimum-sizing-job.yaml
@@ -39,7 +39,8 @@ spec:
             - |
               #!/usr/bin/env bash
 
-              sleep 60
+              echo "Waiting five minutes for operator to do it's magic"
+              sleep 300
 
               echo "Waiting for deploy/registry-clair-postgres to be available"
               until oc get deployment registry-clair-postgres
