--- a/components/apps/quay-registry-operator/overlays/default/set-minimum-sizing-job.yaml
+++ b/components/apps/quay-registry-operator/overlays/default/set-minimum-sizing-job.yaml
@@ -27,7 +27,7 @@ metadata:
   name: set-quay-minimum-sizing
   annotations:
     argocd.argoproj.io/hook: PostSync
-#    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
