Add user space garfana, accidentally removed it when refactoring

--- a/tenants/product-catalog/namespaces/overlays/monitor/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/monitor/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - ../../base
 - monitor-namespace.yaml
 - monitor-operatorgroup.yaml
+- github.com/redhat-cop/gitops-catalog/grafana-operator/overlays/user-app
 
 # Patch in namespace for Argo CD that is managing this namespace
 patches:
