Run job once so don't make it a postsync hook

--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   name: init-quay
   annotations:
-    argocd.argoproj.io/hook: PostSync
+    # argocd.argoproj.io/hook: PostSync
     # argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
