--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
@@ -19,8 +19,9 @@ spec:
             - |
               #!/usr/bin/env bash
 
-              git clone https://github.com/gnunn-gitops/quay-init
+              sleep 120
 
+              git clone https://github.com/gnunn-gitops/quay-init
 
               ansible-galaxy collection install -r collections/requirements.yml
 
