Forgot to cd to cloned dir

--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
@@ -25,6 +25,8 @@ spec:
 
               git clone https://github.com/gnunn-gitops/quay-init
 
+              cd quay-init
+
               ansible-galaxy collection install -r collections/requirements.yml
 
               ansible-playbook quay-init.yaml -e quay_init_password=$quay_init_password
