--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
@@ -27,7 +27,7 @@ spec:
 
               cd quay-init
 
-              ansible-galaxy collection install -r collections/requirements.yml
+              ansible-galaxy collection install -r collections/requirements.yaml
 
               ansible-playbook quay-init.yaml -e quay_init_password=$quay_init_password
           name: init-quay
