--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
@@ -1,7 +1,30 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: quay-init
+  annotations:
+    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: quay-init
+  annotations:
+    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
+subjects:
+  - kind: ServiceAccount
+    name: quay-init
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: init-quay
+  name: quay-init
   annotations:
     # argocd.argoproj.io/hook: PostSync
     # argocd.argoproj.io/hook-delete-policy: HookSucceeded
@@ -36,7 +59,32 @@ spec:
               ansible-galaxy collection install -r collections/requirements.yaml
 
               ansible-playbook quay-init.yaml -e quay_init_password=$quay_init_password
+
+              echo "Waiting for deploy/registry-clair-app to be available"
+              until oc get deployment registry-clair-app
+              do
+                sleep 5;
+              done
+              oc scale deploy/registry-clair-app --replicas=1
+
+              echo "Waiting for deploy/registry-quay-app to be available"
+              until oc get deployment registry-quay-app
+              do
+                sleep 5;
+              done
+              oc set resources deploy/registry-quay-app -c=quay-app --requests=cpu=1,memory=1Gi --limits=cpu=2,memory=4Gi
+              oc scale deploy/registry-quay-app --replicas=1
+
+              echo "Waiting for deploy/registry-clair-postgres to be available"
+              until oc get deployment registry-clair-postgres
+              do
+                sleep 5;
+              done
+              oc set resources deploy/registry-clair-postgres -c=postgres --limits=memory=3Gi
+
           name: init-quay
       dnsPolicy: ClusterFirst
       restartPolicy: Never
       terminationGracePeriodSeconds: 30
+      serviceAccount: quay-init
+      serviceAccountName: quay-init
