Add sync waves so that sealedsecrets go first, then registry and then init-job

--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/init-quay-job.yaml
@@ -19,6 +19,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: quay-init
+  annotations:
+    argocd.argoproj.io/sync-wave: "20"
 spec:
   template:
     spec:
