--- a/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
+++ b/clusters/local.home/apps/quay-registry-operator/overlays/qnap/registry.yaml
@@ -2,6 +2,8 @@ apiVersion: quay.redhat.com/v1
 kind: QuayRegistry
 metadata:
   name: registry
+  annotations:
+    argocd.argoproj.io/sync-wave: "10"
 spec:
   components:
     - managed: false
