--- a/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
+++ b/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
@@ -27,6 +27,7 @@ resources:
 - ../../../../../../../components/argocd/apps/tenant-product-catalog/base
 - ../../../../../../../components/argocd/apps/tekton-cluster-tasks/base
 # - ../../../quay-registry-operator/base
+- ../../../../../../../components/argocd/apps/kyverno/overlays/policies
 
 patches:
 - patch: |-
