Increase liveness delay for openshift CRDs

--- a/components/apps/kyverno/base/kustomization.yaml
+++ b/components/apps/kyverno/base/kustomization.yaml
@@ -26,6 +26,9 @@ patches:
     - op: replace
       path: /spec/template/spec/containers/0/resources/limits/memory
       value: 768Mi
+    - op: replace
+      path: /spec/template/spec/containers/0/livenessProbe/initialDelaySeconds
+      value: 30
   target:
     kind: Deployment
     name: kyverno
