--- a/components/argocd/apps/config-kyverno/base/config-kyverno-app.yaml
+++ b/components/argocd/apps/config-kyverno/base/config-kyverno-app.yaml
@@ -11,6 +11,11 @@ spec:
   destination:
     namespace: kyverno
     server: https://kubernetes.default.svc
+  ignoreDifferences:
+    - group: kyverno.io
+      kind: ClusterPolicy
+      jqPathExpressions:
+      - .spec.rules[] | select(.name|test("autogen-."))
   project: cluster-config
   source:
     path: components/apps/kyverno/overlays/policies
