Add autoresizing of system-reserved

--- a/components/configs/worker-node-config/base/kubeletconfig.yaml
+++ b/components/configs/worker-node-config/base/kubeletconfig.yaml
@@ -1,10 +1,11 @@
 apiVersion: machineconfiguration.openshift.io/v1
 kind: KubeletConfig
 metadata:
-  name: set-max-pods
+  name: custom-worker-config
 spec:
+  autoSizingReserved: true
   machineConfigPoolSelector:
     matchLabels:
-      custom-kubelet: set-max-pods
+      custom-kubelet: custom-worker-config
   kubeletConfig:
     maxPods: 350
