Set failurePolicy to Ignore to disable webhooks

--- a/components/apps/kyverno/overlays/policies/require-requests-limits-policy.yaml
+++ b/components/apps/kyverno/overlays/policies/require-requests-limits-policy.yaml
@@ -16,6 +16,7 @@ metadata:
       requests and memory limits.
 spec:
   validationFailureAction: audit
+  failurePolicy: Ignore
   background: true
   rules:
   - name: validate-resources
