--- a/components/apps/gitops-operator/base/kustomization.yaml
+++ b/components/apps/gitops-operator/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- create-pipeline-local-user-job.yaml
 - gitops-operator-cr.yaml
 # - gitops-workaround-993-role.yaml
 - in-cluster-secret.yaml
