--- a/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
+++ b/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
@@ -9,27 +9,27 @@ spec:
   template:
     spec:
       containers:
-      - image: quay.io/argoproj/argocd:v2.2.2
+      - image: registry.redhat.io/openshift-gitops-1/argocd-rhel8:v1.4.2
         command:
           - /bin/bash
           - -c
           - |
             echo "Checking if pipeline account already there..."
-            if oc get cm argocd-cm -o jsonpath={.data."accounts\.pipeline"};
+            if kubectl get cm argocd-cm -o jsonpath={.data."accounts\.pipeline"};
             then
               echo "Pipeline account already added, skipping"
             else
               echo "Pipeline account doesn't exist, adding"
               echo "Getting argocd admin credential..."
-              if oc get secret argocd-cluster;
+              if kubectl get secret argocd-cluster;
               then
                 # Create pipeline user
-                oc patch cm argocd-cm --patch '{"data": {"accounts.pipeline": "apiKey"}}'
+                kubectl patch cm argocd-cm --patch '{"data": {"accounts.pipeline": "apiKey"}}'
                 # Update password
                 PASSWORD=$(oc get secret argocd-cluster -o jsonpath="{.data.admin\.password}" | base64 -d)
                 argocd login --username admin --password ${PASSWORD} ${ARGOCD_HOST}
                 TOKEN=$(argocd account generate-token --account pipeline)
-                oc create secret generic argocd-api-token --from-literal=token=${TOKEN} -n ${CICD_NAMESPACE}
+                kubectl create secret generic argocd-api-token --from-literal=token=${TOKEN} -n ${CICD_NAMESPACE}
               else
                 echo "Secret argocd-cluster not available, could not interact with API"
               fi
