--- a/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
+++ b/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
@@ -26,7 +26,7 @@ spec:
                 kubectl patch cm argocd-cm --patch '{"data": {"accounts.pipeline": "apiKey"}}'
                 # Update password
                 PASSWORD=$(oc get secret argocd-cluster -o jsonpath="{.data.admin\.password}" | base64 -d)
-                argocd login --username admin --password ${PASSWORD} ${ARGOCD_HOST}
+                argocd login --plaintext --username admin --password ${PASSWORD} argocd-server
                 TOKEN=$(argocd account generate-token --account pipeline)
                 kubectl create secret generic argocd-api-token --from-literal=token=${TOKEN} -n ${CICD_NAMESPACE}
                 else
