Allow pipeline local account to get and sync applications in apps-product-catalog

--- a/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
@@ -45,5 +45,6 @@ patches:
         policy: |
           g, product-catalog-admins, role:admin
           g, system:cluster-admins, role:admin
-          g, pipeline, role:org-admin
-        scopes: "[groups]"
+          p, pipeline, get, apps-product-catalog/*, allow
+          p, pipeline, sync, apps-product-catalog/*, allow
+        scopes: "[accounts,groups]"
