Temp disable self-heal

--- a/tenants/product-catalog/argocd/applicationset/base/tenant-applicationset.yaml
+++ b/tenants/product-catalog/argocd/applicationset/base/tenant-applicationset.yaml
@@ -62,7 +62,7 @@ spec:
       syncPolicy:
         automated:
           prune: false
-          selfHeal: true
+          selfHeal: false
         retry:
           limit: 2
           backoff:
