Move in-cluster-secret into tenant namespace

--- a/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
 - operatorgroup.yaml
 - product-catalog-project.yaml
 - console-link.yaml
+- in-cluster-secret.yaml
 
 patches:
 # Patch create-local-pipeline account job environment variables
