Try setting to improve sync performance

--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -3,6 +3,10 @@ kind: ArgoCD
 metadata:
   name: argocd
 spec:
+  controller:
+    env:
+    - name: "ARGOCD_K8S_CLIENT_BURST"
+      value: "350"
   dex:
     openShiftOAuth: true
   applicationInstanceLabelKey: argocd.argoproj.io/instance
