--- a/components/apps/letsencrypt-certs/overlays/default/kustomization.yaml
+++ b/components/apps/letsencrypt-certs/overlays/default/kustomization.yaml
@@ -8,3 +8,16 @@ bases:
 - github.com/redhat-cop/gitops-catalog/letsencrypt-certs/base
 resources:
 - sealed-cloud-dns-credentials.yaml
+
+patches:
+- patch: |-
+    - op: replace
+      path: /spec/template/spec/containers/0/env
+      value:
+        - name: STAGING
+          value: "false"
+        - name: PATCH_API_SERVER
+          value: "true"
+  target:
+    kind: Job
+    name: letsencrypt-certificates-job
