Add access mode

--- a/clusters/local.home/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
+++ b/clusters/local.home/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
@@ -8,6 +8,8 @@ data:
     prometheusK8s:
       volumeClaimTemplate:
        spec:
+         accessModes:
+         - ReadWriteOnce
          storageClassName: csi-driver-lvm-linear
          volumeMode: Filesystem
          resources:
