--- a/clusters/local.home/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
+++ b/clusters/local.home/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: openshift-monitoring
 data:
   config.yaml: |
+    enableUserWorkload: true
     prometheusK8s:
       volumeClaimTemplate:
        spec:
