--- a/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
+++ b/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
 - ../../../../../../../components/argocd/apps/config-alertmanager/base
 - ../../../../../../../components/argocd/apps/config-console-links/base
 - ../../../../../../../components/argocd/apps/config-helm-repos/base
-- ../../../../../../../components/argocd/apps/config-prometheus-user-app/base
+#- ../../../../../../../components/argocd/apps/config-prometheus-user-app/base
 - ../../../../../../../components/argocd/apps/config-container-security/base
 - ../../../../../../../components/argocd/apps/config-compliance-operator/base
 - ../../../../../../../components/argocd/apps/config-acs/base
