--- a/components/apps/acs-operator/overlays/oauth/init-acs.yaml
+++ b/components/apps/acs-operator/overlays/oauth/init-acs.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: init-acs
+  namespace: stackrox
   annotations:
     argocd.argoproj.io/sync-wave: "20"
 spec:
