--- a/tenants/product-catalog/namespaces/overlays/prod/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/prod/kustomization.yaml
@@ -1,8 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: product-catalog-prod
+
 resources:
 - ../../base
+- ../../../../defaults/quotas/overlays/medium
 - prod-namespace.yaml
 
 # Patch in namespace for Argo CD that is managing this namespace
