--- a/tenants/product-catalog/namespaces/base/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/base/kustomization.yaml
@@ -3,4 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 
 resources:
 - ../../../../components/apps/tenant-namespace/overlays/gitops
+- ../../../defaults/networkpolicy/base
 - user1-rolebinding.yaml
