--- a/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
+++ b/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
@@ -6,7 +6,8 @@ namespace: openshift-gitops
 resources:
 # - ../../../clusterversion/base
 - ../../../../../../../components/argocd/apps/sealed-secrets/base
-- ../../../../../../../components/argocd/apps/letsencrypt-certs/base
+- ../../../../../../../components/argocd/apps/cert-manager-operator/base
+# - ../../../../../../../components/argocd/apps/letsencrypt-certs/base
 # - ../../../../../../../components/argocd/apps/config-storage/base
 - ../../../../../../../components/argocd/apps/config-authentication/base
 - ../../../../../../../components/argocd/apps/config-groups-and-membership/base
