--- a/components/apps/cert-manager-operator/overlays/letsencrypt/kustomization.yaml
+++ b/components/apps/cert-manager-operator/overlays/letsencrypt/kustomization.yaml
@@ -1,13 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: openshift-operators
-
 commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 resources:
+- ../../base
+- instance-namespace.yaml
 - letsencrypt-aws-sealed-secret.yaml
-- subscription.yaml
 - letsencrypt-prod-cluster-issuer.yaml
-
