--- a/components/apps/cert-manager-operator/base/operator-group.yaml
+++ b/components/apps/cert-manager-operator/base/operator-group.yaml
@@ -2,6 +2,4 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: openshift-cert-manager-operator
-spec:
-  targetNamespaces:
-   - openshift-cert-manager-operator
+spec: {}
