Manage cluster certificates with cert-manager

--- a/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
+++ b/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 # - ../../../clusterversion/base
 - ../../../../../../../components/argocd/apps/sealed-secrets/base
 - ../../../../../../../components/argocd/apps/config-cert-manager-operator/base
+- ../../../cluster-certs/base
 # - ../../../../../../../components/argocd/apps/letsencrypt-certs/base
 # - ../../../../../../../components/argocd/apps/config-storage/base
 - ../../../../../../../components/argocd/apps/config-authentication/base
