Fix SA name in ClusterRoleBinding

--- a/clusters/local.home/apps/cluster-certs/overlays/openshift-wildcard-cert/patch-cluster-wildcard-cert-job.yaml
+++ b/clusters/local.home/apps/cluster-certs/overlays/openshift-wildcard-cert/patch-cluster-wildcard-cert-job.yaml
@@ -29,7 +29,7 @@ roleRef:
   name: patch-cluster-wildcard-cert
 subjects:
   - kind: ServiceAccount
-    name: patch-cluster-certs
+    name: patch-cluster-wildcard-cert
 ---
 apiVersion: v1
 kind: ServiceAccount
