Use production URL not staging

--- a/components/apps/cert-manager-operator/overlays/letsencrypt/letsencrypt-prod-cluster-issuer.yaml
+++ b/components/apps/cert-manager-operator/overlays/letsencrypt/letsencrypt-prod-cluster-issuer.yaml
@@ -4,7 +4,7 @@ metadata:
   name: letsencrypt-prod
 spec:
   acme:
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org/directory
     email: gnunn@redhat.com
     # This key doesn't exist, cert-manager creates it
     privateKeySecretRef:
