--- a/clusters/local.home/apps/cluster-certs/overlays/openshift-api-cert/patch-cluster-api-cert-job.yaml
+++ b/clusters/local.home/apps/cluster-certs/overlays/openshift-api-cert/patch-cluster-api-cert-job.yaml
@@ -18,6 +18,7 @@ rules:
       - get
       - list
       - patch
+      - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
