Try plural of apiservers

--- a/clusters/local.home/apps/cluster-certs/overlays/openshift-api-cert/patch-cluster-api-cert-job.yaml
+++ b/clusters/local.home/apps/cluster-certs/overlays/openshift-api-cert/patch-cluster-api-cert-job.yaml
@@ -13,7 +13,7 @@ rules:
   - apiGroups:
       - config.openshift.io
     resources:
-      - apiserver
+      - apiservers
     verbs:
       - get
       - list
