Add kyverno back to cluster

--- a/components/apps/kyverno/base/kustomization.yaml
+++ b/components/apps/kyverno/base/kustomization.yaml
@@ -5,33 +5,33 @@ resources:
 - https://raw.githubusercontent.com/kyverno/kyverno/main/config/release/install.yaml
 
 patches:
-- patch: |-
-    - op: add
-      path: /rules/1/resources/-
-      value: |-
-        policyreports/finalizers
-        clusterpolicyreports/finalizers
-  target:
-    kind: ClusterRole
-    name: kyverno:policies
-- patch: |-
-    - op: add
-      path: /rules/1/resources/-
-      value: |-
-        namespaces/finalizers
-  target:
-    kind: ClusterRole
-    name: kyverno:generate
-- patch: |-
-    - op: replace
-      path: /spec/template/spec/containers/0/resources/limits/memory
-      value: 768Mi
-    - op: replace
-      path: /spec/template/spec/containers/0/livenessProbe/initialDelaySeconds
-      value: 60
-  target:
-    kind: Deployment
-    name: kyverno
+# - patch: |-
+#     - op: add
+#       path: /rules/1/resources/-
+#       value: |-
+#         policyreports/finalizers
+#         clusterpolicyreports/finalizers
+#   target:
+#     kind: ClusterRole
+#     name: kyverno:policies
+# - patch: |-
+#     - op: add
+#       path: /rules/1/resources/-
+#       value: |-
+#         namespaces/finalizers
+#   target:
+#     kind: ClusterRole
+#     name: kyverno:generate
+# - patch: |-
+#     - op: replace
+#       path: /spec/template/spec/containers/0/resources/limits/memory
+#       value: 768Mi
+#     - op: replace
+#       path: /spec/template/spec/containers/0/livenessProbe/initialDelaySeconds
+#       value: 60
+#   target:
+#     kind: Deployment
+#     name: kyverno
 - patch: |-
     - op: replace
       path: /data/resourceFilters
