--- a/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
+++ b/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
@@ -15,11 +15,9 @@ resources:
 - ../../../../../../../components/argocd/apps/config-alertmanager/base
 - ../../../../../../../components/argocd/apps/config-console-links/base
 - ../../../../../../../components/argocd/apps/config-helm-repos/base
-#- ../../../../../../../components/argocd/apps/config-prometheus-user-app/base
 - ../../../../../../../components/argocd/apps/config-container-security/base
 - ../../../../../../../components/argocd/apps/config-compliance-operator/base
 - ../../../../../../../components/argocd/apps/config-acs/base
-# - ../../../../../../../components/argocd/apps/config-namespace-config-operator/base
 # - ../../../../../../../components/argocd/apps/config-web-terminal-operator/base
 - ../../../../../../../components/argocd/apps/config-pipeline-operator/base
 - ../../../../../../../components/argocd/apps/config-camel-k-operator/base
@@ -30,7 +28,7 @@ resources:
 - ../../../../../../../components/argocd/apps/tekton-cluster-tasks/base
 - ../../../openshift-monitoring/base
 # - ../../../quay-registry-operator/base
-# - ../../../../../../../components/argocd/apps/config-kyverno/base
+- ../../../../../../../components/argocd/apps/config-kyverno/base
 
 patches:
 - patch: |-
