--- a/clusters/default/argocd/bootstrap/kustomization.yaml
+++ b/clusters/default/argocd/bootstrap/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 
 helmCharts:
 - name: argocd-app-of-app
-  version: 0.1.1
+  version: 0.2.0
   repo: https://gnunn-gitops.github.io/helm-charts
   valuesFile: values.yaml
   namespace: openshift-gitops
-  releaseName: cluster-config
+  releaseName: argocd-app-of-app
