--- a/clusters/default/argocd/bootstrap/values.yaml
+++ b/clusters/default/argocd/bootstrap/values.yaml
@@ -18,6 +18,13 @@ projects:
     namespace: openshift-gitops
     sourceRepos:
     - https://github.com/gnunn-gitops/cluster-config
+    destinations: |
+      - namespace: '*'
+        server: https://kubernetes.default.svc
+    extraFields: |
+      clusterResourceWhitelist:
+      - group: '*'
+        kind: '*'
 
 applications:
 
